common/tests/badSyntax/includeUnclosedStr.output
unclosedString.tyco:6.36: 
Unclosed string at end of file
includeUnclosedStr.tyco:6.124: 
Syntax error at |
2 errors
