common/tests/badSyntax/includeUnclosedStr.tyco
-- Syntax Error

-- Including a file containing an unclosed string

new x
include "unclosedString.tyco" |
x ! lala ["lele"]
